# server/controllers/Labo_db/AdressesController.js
@@ -1,0 +1,59 @@
+import AdressesControllerGenerated from "./generated/AdressesControllerGenerated";
+
+// Properties
+import Properties from "../../properties";
+
+// Database
+import AdressesModel from "../../models/Labo_db/AdressesModel";
+
+// Security
+import { authorize } from "../../security/SecurityManager";
+
+// Errors
+import Errors from "../../classes/Errors";
+import ErrorManager from "../../classes/ErrorManager";
+
+const customControllers = {
+  
+  /**
+   * Override here your custom routes
+   * EXAMPLE:
+   *
+    
+   init: router => {
+     const baseUrl = `${Properties.api}/adresses`;
+     
+     // custom route
+     router.get(baseUrl + "/:id", customControllers.get);
+     
+     // Init super
+     AdressesControllerGenerated.init(router);
+    },
+
+  */
+
+  /**
+   * Override here your custom controllers
+   * EXAMPLE:
+   *
+   
+    get: async (req, res) => {
+      try {
+        console.log("This is my custom controller");
+        const result = await AdressesModel.get(req.params.id);
+        res.json(result);
+      } catch (err) {
+        const safeErr = ErrorManager.getSafeError(err);
+        res.status(safeErr.status).json(safeErr);
+      }
+    }
+
+   */
+   
+};
+
+export default {
+  ...AdressesControllerGenerated,
+  ...customControllers
+};
+
